--- a/jingnan_service/jingnan_service_goods/src/main/resources/application.yml
+++ b/jingnan_service/jingnan_service_goods/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     name: goods
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://192.168.200.128:3306/jingnan_goods?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+    url: jdbc:mysql://192.168.200.128:3306/jingnan_goods?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC
     username: root
     password: root
   main:
